syntax = "proto3";

package juno.identifiers;

message ProjectIdentifier {
  oneof identifier {
    int64 id = 1;
    string name = 2;
  }
}

message UserIdentifier {
  oneof identifier {
    int64 id = 1;
    string email = 2;
  }
}
