syntax = "proto3";

package juno.user;

import "identifiers.proto";

service UserService {
  rpc getUser(identifiers.UserIdentifier) returns (User);
  rpc createUser(CreateUserRequest) returns (User);
  rpc updateUser(UpdateUserRequest) returns (User);
  rpc deleteUser(identifiers.UserIdentifier) returns (User);
  rpc linkProject(LinkProjectToUserRequest) returns (User);
  rpc getUserPasswordHash(identifiers.UserIdentifier)
      returns (UserPasswordHash);
}

service UserAuthService {
  rpc authenticate(AuthenticateUserRequest) returns (User);
}

message User {
  int64 id = 1;
  string email = 2;
  string name = 3;
  UserType type = 4;
}

message UserPasswordHash { string hash = 1; }

message UserPassword { string password = 1; }

enum UserType {
  SUPERADMIN = 0;
  ADMIN = 1;
  USER = 2;
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
  UserType type = 4;
}

message UserUpdateParams {
  optional string email = 1;
  optional string name = 2;
  optional string password = 3;
  optional UserType type = 4;
}

message UpdateUserRequest {
  identifiers.UserIdentifier userIdentifier = 1;
  UserUpdateParams updateParams = 2;
}

message LinkProjectToUserRequest {
  identifiers.ProjectIdentifier project = 1;
  identifiers.UserIdentifier user = 2;
}

message AuthenticateUserRequest {
  string email = 1;
  string password = 2;
}
